공지사항, qna 추가

--- a/project_team/board_qna.html
+++ b/project_team/board_qna.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>공지사항</title>
+    <title>Q&A</title>
     <style>
 
         *,
@@ -207,7 +207,7 @@
             line-height: 45px;
             padding-left: 10px;
         }
-        .main-left li:first-child a {
+        .main-left li:nth-child(2) a {
             color: white;
             font-weight: bold;
             background-color: #0382c2;
@@ -332,7 +332,7 @@
                 <div></div> <!--왼쪽 세부 메뉴 가짜 공간-->
 
                 <section class="main-right"> <!--게시판 본문 시작-->
-                    <h1><i class="far fa-file-alt"></i> 공지사항</h1>
+                    <h1><i class="far fa-file-alt"></i> Q&A - 답글기능만들예정</h1>
                     <table class="noticeTable">
                         <colgroup> <!--테이블 컬럼 너비 조절하는 태그-->
                             <col width="5%"/>
