--- a/project_team/signup.html
+++ b/project_team/signup.html
@@ -142,13 +142,12 @@
                         <th>소속</th>
                         <td>
                             <select name="department" id="dept">
-                                <option value="총무">총무</option>
-                                <option value="회계">회계</option>
                                 <option value="인사">인사</option>
                                 <option value="영업">영업</option>
+                                <option value="마케팅">마케팅</option>
+                                <option value="총무회계">총무회계</option>
                                 <option value="기술지원">기술지원</option>
                                 <option value="전략기획">전략기획</option>
-                                <option value="해외사업">해외사업</option>
                             </select>
                         </td>
                     </tr>
@@ -157,15 +156,12 @@
                         <td>
                             <select name="rank" id="rank">
                                 <option value="사장">사장</option>
-                                <option value="부사장">부사장</option>
                                 <option value="전무">전무</option>
-                                <option value="상무">상무</option>
                                 <option value="이사">이사</option>
                                 <option value="부장">부장</option>
                                 <option value="차장">차장</option>
                                 <option value="과장">과장</option>
                                 <option value="대리">대리</option>
-                                <option value="주임">주임</option>
                                 <option value="사원" selected>사원</option>
                             </select>
                         </td>
