--- a/project_team/board_payment_trip.html
+++ b/project_team/board_payment_trip.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>홈화면</title>
+    <title>전자결재</title>
     <style>
 
         *,
@@ -182,55 +182,119 @@
             justify-content: space-between;
         }
 
-        .section-left {
-            width: 526px;
-            margin: 30px;
-        }
-
-        .myPage {
-            width: 100%;
-            height: 560px;
-            border: 1px solid #777;
-        }
-
-        .btn-G {
-            width: 100%;
-            height: 200px;
-            margin-top: 30px;
-            border: 1px solid #777;
-        }
-
-        .section-right {
-            width: 1,052px;
-            margin-top: 30px;
-            margin-right: 30px;
-            margin-bottom: 30px;
-        }
-
-        .section-right-top {
-            height: 300px;
-            display: flex;
-            margin-bottom: 30px;
-        }
-        .section-right-top-left {
-            width: 526px;
-            margin-right: 30px;
+        /*************** 여기서부터 추가했음 ******************/
+        /*왼쪽 세부 메뉴*/
+        .main-left {
+            width: 200px;
             height: 100%;
-            border: 1px solid #777;
+            background-color: white;
+            border-right: 1px solid #ccc;
+            position: fixed;
         }
-
-        .section-right-top-right {
-            width: 526px;
+        .main-left ul {
+            width: 100%;
             height: 100%;
-            border: 1px solid #777;
         }
-
-        .section-right-bottom {
-            border: 1px solid #777;
-            height: 460px;
+        .main-left li {
+            border-bottom: 1px solid #ccc;
         }
-
-
+        .main-left a {
+            height: 45px;
+            display: block;
+            color: #333;
+            font-size: 14px;
+            text-align: left;
+            line-height: 45px;
+            padding-left: 10px;
+        }
+        .paymentmenu>li:first-child>a {
+            color: white;
+            font-weight: bold;
+            background-color: #0382c2;
+        }
+        .paymentmenu>li:first-child>a i {
+            padding-left: 116px;
+        }
+        .submenu li {
+            border: none;
+        }
+        .submenu li a {
+            padding-left: 30px;
+        }
+        .submenu li:nth-child(3) a {
+            font-weight: bold;
+        }
+        .submenu li a i {
+            font-size: 12px;
+        }
+        
+        /*오른쪽 본문 부분*/
+        .main-right {
+            width: 1520px;
+            height: 100%;
+            padding: 15px 30px;
+        }
+        .main-right h1 { /*게시판 제목 - 공지사항*/
+            color: #333;
+            font-size: 18px;
+        }
+        table.noticeTable { /*테이블*/
+            width: 100%;
+            margin-top: 50px;
+            border: 1px solid #ccc;
+            border-collapse: collapse;
+            color: #333;
+            font-size: 12px;
+            text-align: center;
+            background-color: white;
+            table-layout: fixed; /* 테이블 너비 고정 */
+            word-break: break-all; /* 텍스트 자동 줄바꿈 */
+        }
+        .noticeTable th {
+            height: 42px;
+            background-color: blue;
+            color: white;
+        }
+        .noticeTable tbody tr:hover { /* 한줄씩 hover 효과 */
+            background-color: #f4f7f7;
+        }
+        .noticeTable td {
+            height: 32px;
+            border-bottom: 1px solid #ccc;
+        }
+        .noticeTable td:nth-child(2) { /* 제목 컬럼 */
+            text-align: left;
+            padding-left: 15px;
+            color: #0382c2;
+        }
+        .paging { /*페이징*/
+            text-align: center;
+        }
+        .paging span {
+            width: 25px;
+            height: 25px;
+            display: inline-block;
+            margin: 30px 3px;
+            border: 1px solid #ccc;
+        }
+        .paging a {
+            font-size: 12px;
+            line-height: 22px;/* 수직 중앙 정렬 */
+            color: #333;
+            display: block;
+        }
+        .buttons { /*버튼들 - 글쓰기*/
+            text-align: right;
+        }
+        a.write {
+            padding: 7px 15px;
+            border-radius: 3px 3px 3px 3px;
+            background-color: #0382c2;
+            color: white;
+            font-size: 14px;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -241,7 +305,7 @@
                     <a href="#"><img src="logo_transparent.png" alt="사이드바_로고"></a>
                 </div>
                 <ul class="gnb-menu">
-                    <li><a href="board_payment_spend.html"><i class="far fa-edit"></i> 전자결재</a></li>
+                    <li><a href="board_payment.html"><i class="far fa-edit"></i> 전자결재</a></li>
                     <li><a href="#"><i class="fas fa-cloud-download-alt"></i> 업무공유</a></li>
                     <li><a href="board_notice.html"><i class="fas fa-table"></i> 게시판</a></li>
                     <li><a href="#"><i class="far fa-building"></i> 오피스</a></li>
@@ -273,32 +337,47 @@
             </div> <!--상단 메뉴 끝-->
 
             <div class="main-section"> <!-- 메인 페이지 시작 -->
-                <section class="section-left">
-                    <div class="myPage">
-                        마이페이지
-                    </div>
-                    <div class="btn-G">
-                        바로가기 버튼 모음 
-                    </div>
-                </section>
+                <section class="main-left"> <!--왼쪽 세부 메뉴 시작-->
+                    <ul class="paymentmenu">
+                        <li>
+                            <a href="#">결재양식<i class="fas fa-angle-down"></i></a>
+                            <ul class="submenu">
+                                <li><a href="board_payment_spend.html"><i class="fas fa-angle-right"></i> 지출결의서</a></li>
+                                <li><a href="board_payment_buy.html"><i class="fas fa-angle-right"></i> 구매신청서</a></li>
+                                <li><a href="board_payment_trip.html"><i class="fas fa-angle-right"></i> 출장보고서</a></li>
+                                <li><a href="board_payment_off.html"><i class="fas fa-angle-right"></i> 연차신청서</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">결재대기문서</a></li>
+                        <li><a href="#">결재완료문서</a></li>
+                    </ul>
+                </section> <!--왼쪽 세부 메뉴 끝-->
+                
+                <div></div> <!--왼쪽 세부 메뉴 가짜 공간-->
 
-                <section class="section-right">
-                    <div class="section-right-top">
-                        <div class="section-right-top-left">
-                            업무공유
-                        </div>
-                        <div class="section-right-top-right">
-                            일정공유(달력)
-                        </div>
-                    </div>
-
-                    <div class="section-right-bottom">
-                        공지사항
-                    </div>
-                </section>
+                <section class="main-right"> <!--게시판 본문 시작-->
+                    <h1><i class="far fa-file-alt"></i> 출장보고서</h1>
+                    여기!!!!
+                    <div class="buttons"> <!--글쓰기 버튼들 시작-->
+                        <a class="write">결재요청</a>
+                    </div> <!--글쓰기 버튼들 끝-->
+                </section> <!--게시판 본문 끝-->
             </div> <!-- 메인 페이지 끝 -->
         </main>
     </div>
 
+    <script>
+        $(function () {
+            $(".paymentmenu>li:first-child").click(function () {
+                $(".submenu").slideToggle();
+                if($(".paymentmenu>li:first-child>a i").hasClass("fa-angle-down")){
+                    $(".paymentmenu>li:first-child>a i").removeClass("fa-angle-down").addClass("fa-angle-up");
+                } else {
+                    $(".paymentmenu>li:first-child>a i").removeClass("fa-angle-up").addClass("fa-angle-down");
+                }
+            }
+            );
+        });
+    </script>
 </body>
 </html>
