--- a/project_team/board_qna.html
+++ b/project_team/board_qna.html
@@ -290,7 +290,7 @@
                     <a href="#"><img src="logo_transparent.png" alt="사이드바_로고"></a>
                 </div>
                 <ul class="gnb-menu">
-                    <li><a href="#"><i class="far fa-edit"></i> 전자결재</a></li>
+                    <li><a href="board_payment_spend.html"><i class="far fa-edit"></i> 전자결재</a></li>
                     <li><a href="#"><i class="fas fa-cloud-download-alt"></i> 업무공유</a></li>
                     <li><a href="board_notice.html"><i class="fas fa-table"></i> 게시판</a></li>
                     <li><a href="#"><i class="far fa-building"></i> 오피스</a></li>
